    - Revised the tooltips for the item buffs "All Buffs Cost Reduced", "Unresearched Penalty Reduced", and "Strongbox Loot".
    - Reduced the total number of strongbox levels from 36 to 28.
    - Strongboxes at the maximum level no longer respawn when destroyed.
    - Reduced hex claim costs on all planets except Nauvis to reflect the item value rebalancing.
    - Changed stack sizes of hexadic resonators.
  Balancing:
    - Changed all exponential item buff scaling to linear.
    - Changed default sink/generator trade efficiency from 10% to 25%.
    - Reduced default setting "Total Hexes" for Nauvis from 7000 to 5000.
    - Reduced default setting "Total Hexes" for Gleba from 4000 to 1800.
    - Reduced default setting "Total Hexes" for Aquilo from 1800 to 600.
    - Reduced the frequency of hexadic resonators showing up in dungeon chests.
    - Free item buff enhancements/unlocks from hexadic resonators now only work when an hour of your net coin production (60x what is seen in the hex rank GUI) is greater than the cost of the buff that would be enhanced/unlocked.
        If the cheapest item buff exceeds this limit, free item buffs are queued (still consuming the hexadic resonator) until net coin production is high enough to support it.
    - Strongbox coins are now based on the maximum achieved net coin production.
        When reaching higher amounts of net coin production, the extra coins that past strongboxes would've given are retroactively given to all players.
    - Rebalanced item values to be less about a planet's stage in the game progression but instead more about actual difficulty of obtainment.
        For example, coal/iron/copper on Vulcanus is now less valuable than on Nauvis, and oil-based products on Fulgora now generally have low values.
    - Item values are now affected by each planet's core challenges:
        Nauvis' items are scaled "normally".